package Ejercicio1.Barco;

public enum Clima {
    CALMA, TSUNAMI, VIENTO, TORMENTA
}