package Ejercicio1.Barco;

public interface IntBarco {
    void moverBarco();
    boolean disparar(int fila, int columna);
}