package Ejercicio1.Barco;

public enum Orientacion {
    HORIZONTAL,
    VERTICAL
}
